Implement bounding area- and volume hierarchies to improve performance

--- a/Geometry2D/Geometry2D.vcxproj.filters
+++ b/Geometry2D/Geometry2D.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClInclude Include="AxisAlignedRectangle.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BoundingAreaHierarchy.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
