--- a/Geometry2D/Geometry2D.vcxproj
+++ b/Geometry2D/Geometry2D.vcxproj
@@ -143,6 +143,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="AxisAlignedRectangle.hpp" />
+    <ClInclude Include="BoundingAreaHierarchy.hpp" />
     <ClInclude Include="Point.hpp" />
     <ClInclude Include="Triangle.hpp" />
     <ClInclude Include="Vector.hpp" />
