--- a/Rendering3D/Rendering3D.vcxproj
+++ b/Rendering3D/Rendering3D.vcxproj
@@ -30,10 +30,10 @@
     <ClInclude Include="include\material_assets.hpp" />
     <ClInclude Include="include\OmnidirectionalLight.hpp" />
     <ClInclude Include="include\RectangularAreaLight.hpp" />
-    <ClInclude Include="include\RenderableParticle.hpp" />
+    <ClInclude Include="include\ParticleModel.hpp" />
     <ClInclude Include="include\Renderer.hpp" />
     <ClInclude Include="include\SceneGraph.hpp" />
-    <ClInclude Include="include\RenderableObject.hpp" />
+    <ClInclude Include="include\Model.hpp" />
     <ClInclude Include="include\World.hpp" />
   </ItemGroup>
   <ItemGroup>
@@ -46,10 +46,10 @@
     <ClCompile Include="src\material_assets.cpp" />
     <ClCompile Include="src\OmnidirectionalLight.cpp" />
     <ClCompile Include="src\RectangularAreaLight.cpp" />
-    <ClCompile Include="src\RenderableParticle.cpp" />
+    <ClCompile Include="src\ParticleModel.cpp" />
     <ClCompile Include="src\Renderer.cpp" />
     <ClCompile Include="src\SceneGraph.cpp" />
-    <ClCompile Include="src\RenderableObject.cpp" />
+    <ClCompile Include="src\Model.cpp" />
     <ClCompile Include="src\World.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
