--- a/Rendering3D/Rendering3D.vcxproj
+++ b/Rendering3D/Rendering3D.vcxproj
@@ -36,6 +36,7 @@
     <ClInclude Include="include\SceneGraph.hpp" />
     <ClInclude Include="include\Model.hpp" />
     <ClInclude Include="include\SurfaceElement.hpp" />
+    <ClInclude Include="include\Texture.hpp" />
     <ClInclude Include="include\World.hpp" />
   </ItemGroup>
   <ItemGroup>
@@ -53,6 +54,8 @@
     <ClCompile Include="src\Renderer.cpp" />
     <ClCompile Include="src\SceneGraph.cpp" />
     <ClCompile Include="src\Model.cpp" />
+    <ClCompile Include="src\SurfaceElement.cpp" />
+    <ClCompile Include="src\Texture.cpp" />
     <ClCompile Include="src\World.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
