Implement adaptive pixel sampling for path tracing

--- a/Core/Core.vcxproj
+++ b/Core/Core.vcxproj
@@ -19,10 +19,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\image_util.cpp" />
     <ClCompile Include="src\math_util.cpp" />
     <ClCompile Include="src\string_util.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\image_util.hpp" />
     <ClInclude Include="include\math_util.hpp" />
     <ClInclude Include="include\precision.hpp" />
     <ClInclude Include="include\string_util.hpp" />
@@ -104,6 +106,7 @@
       <PreprocessorDefinitions>CORE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <AdditionalIncludeDirectories>$(SolutionDir)Core\include\</AdditionalIncludeDirectories>
+      <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -124,6 +127,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>CORE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(SolutionDir)Core\include\</AdditionalIncludeDirectories>
+      <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
