--- a/Core/Core.vcxproj.filters
+++ b/Core/Core.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="src\math_util.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\image_util.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\precision.hpp">
@@ -30,6 +33,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\math_util.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\image_util.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
