--- a/Rendering3D/Rendering3D.vcxproj
+++ b/Rendering3D/Rendering3D.vcxproj
@@ -35,8 +35,12 @@
     <ClInclude Include="include\Renderer.hpp" />
     <ClInclude Include="include\SceneGraph.hpp" />
     <ClInclude Include="include\Model.hpp" />
+    <ClInclude Include="include\StratifiedSubpixelSampler.hpp" />
+    <ClInclude Include="include\SubpixelSampler.hpp" />
     <ClInclude Include="include\SurfaceElement.hpp" />
     <ClInclude Include="include\Texture.hpp" />
+    <ClInclude Include="include\TextureSynthesizer.hpp" />
+    <ClInclude Include="include\UniformSubpixelSampler.hpp" />
     <ClInclude Include="include\World.hpp" />
   </ItemGroup>
   <ItemGroup>
@@ -54,8 +58,12 @@
     <ClCompile Include="src\Renderer.cpp" />
     <ClCompile Include="src\SceneGraph.cpp" />
     <ClCompile Include="src\Model.cpp" />
+    <ClCompile Include="src\StratifiedSubpixelSampler.cpp" />
+    <ClCompile Include="src\SubpixelSampler.cpp" />
     <ClCompile Include="src\SurfaceElement.cpp" />
     <ClCompile Include="src\Texture.cpp" />
+    <ClCompile Include="src\TextureSynthesizer.cpp" />
+    <ClCompile Include="src\UniformSubpixelSampler.cpp" />
     <ClCompile Include="src\World.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
